# PiCameraTweet

./: CMakeLists.txt  PiCameraTweet.sh  README.md
interface/: clearscreen.h
source/: PiCameraTweet.cpp  clearscreen.cpp
